samples/_failures_safe/1761441283_eaa452_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38144d8a.c: In function ‘main’:
./samples/SAFE/__tmp_38144d8a.c:164:16: error: missing terminating " character
  164 |         printf("
      |                ^
./samples/SAFE/__tmp_38144d8a.c:164:9: error: expected expression at end of input
  164 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_38144d8a.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_38144d8a.c:164:9: error: expected declaration or statement at end of input
